--- a/CSS/index.css
+++ b/CSS/index.css
@@ -62,8 +62,12 @@ img {
 
 @media (max-width: 390px) {
   img {
+    
     width: 100px;
-    height: 30px;
+    height: 120px;
+  }
+  .div-img{
+    margin-bottom: 80px;
   }
 }
 
